--- a/ecommerceproject/ecommerceproject/templates/footer.html
+++ b/ecommerceproject/ecommerceproject/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="footer navbar-fixed-bootom my_footer">
   <p class="text-center">
-    &copy; Honey and bake ltd, All rights reserveed
+    &copy; The complete Super Market ltd, All rights reserved
   </p>
 </div>
