--- a/ecommerceproject/ecommerceproject/static/css/custom.css
+++ b/ecommerceproject/ecommerceproject/static/css/custom.css
@@ -6,13 +6,13 @@ font-family: 'Roboto', sans-serif;
 .nav-item {
 letter-spacing :.2em;
 font-size :14px;
-text-transfor: uppercase;
+text-transform: uppercase;
 }
 
 .dropdown-item{
 letter-spacing :.2em;
 font-size :14px;
-text-transfor : uppercase;
+text-transform : uppercase;
 
 }
 
@@ -38,7 +38,8 @@ font-size:12px;
 
 .my_image{
 width:100%;
-height: auto;
+height:100%;
+object-fit:cover;
 }
 
 .my_title{
@@ -47,7 +48,7 @@ text_transform:uppercase;
 letter-spacing:.2em;
 }
 
-.my_mage_padding{
+.my_image_padding{
 padding:5px;
 }
 
@@ -97,7 +98,7 @@ min-width:400px;
 font-size:14px;
 }
 
-.my_custom_thead{{
+.my_custom_thead{
 font-weight:normal;
 text_transform:uppercase;
 letter-spacing:.2em;
@@ -105,9 +106,14 @@ background-color:#f8f9f8fa!important;
 }
 
 .custom_a{
-text-decoratiom:none;
+text-decoration:none;
 }
 
+.custom_image{
+width:100%;
+height:100%;
+object-fit:cover;
+}
 .custom_icon{
 text_decoration:none;
 color:#868e!important;
