--- a/ecommerceproject/ecommerceproject/templates/base.html
+++ b/ecommerceproject/ecommerceproject/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description"  content="{% block metadescription %} {% endblock %}">
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 <link href="{% static 'css/custom.css' %}" rel="stylesheet">
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<script src="{% static 'js/font.min.js' %}"></script>
 
     <title>{% block title %}{% endblock %}</title>
 </head>
