--- a/ecommerceproject/ecommerceproject/templates/category.html
+++ b/ecommerceproject/ecommerceproject/templates/category.html
@@ -3,14 +3,14 @@
 
 {% block metadescription %}
       {% if category %}
-            {{category.description|truncatewords:155 }}
+            {{ category.description|truncatewords:155 }}
       {% else %}
            Welcome To Best Supermarket, were we can buy different brand items....
       {% endif %}
 {% endblock %}
 {% block title %}
  {% if category %}
-            {{category.name}} - ABC Store
+            {{ category.name }} - ABC Store
       {% else %}
          see our collections
       {% endif %}
@@ -23,22 +23,21 @@
   <div class="row my_row_class">
       <div class="mx-auto">
 
-
-    <p><a href="{% url 'shop:allProdCat' %}">our product collection</a></p>
+    <p><a style="color:#000;text-decoration: none; font-style:italic;"href="{% url 'shop:allProdCat' %}">Our Product Collection</a></p>
   </div>
 </div>
     {% endif %}
 <div class="mx-auto">
    {% if category %}
-  <img class="my_image" src="{{category.image.url}}" alt="{{category.name}}">
+  <img class="my_image" src="{{ category.image.url }}" alt="{{ category.name }}">
 
 </div>
 <br>
 <div>
   <h1 class="text-center my_title">
-    {{category.name}}
+    {{ category.name }}
   </h1>
-  <p class="test-justify">{{category.description}}</p>
+  <p class="test-justify">{{ category.description }}</p>
 </div>
 
 {% else %}
@@ -47,20 +46,23 @@
 </div>
 <br>
 <div>
-  <h1 class="text-center my_title">Our product collection</h1>
+  <h1 class="text-center my_title" >Our product collection</h1>
   <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 </div>
 {% endif %}
 <div class="container">
     <div class="row mx-auto">
-        {% for product in products.object_list %}
-    <div class="my_bottom_margin col-9 col-sm-12  col-md-12 col-lg-4">
+<!--        Hellooooooooo-->
+        {% for product in products %}
+
+    <div class="my_bottom_margin col-9 col-sm-12  col-md-10 col-lg-4">
         <div class="card text-center" style="min-width:18rem;">
-        <a href={{product.get_url}}"><img class="card-img-top my_image" src="{{product.image.url}}" alt="productname"></a>
+
+        <a href="{{ product.get_url }}"><img class="card-img-top my_image" src="{{ product.image.url }}" alt="productname" style="background-size: cover;background-position: center center;height: 250px;"></a>
         <div class="card-body">
-            <h4>{{product.name}}</h4>
-            <p> {{product.price}}</p>
+            <h4>{{ product.name }}</h4>
+            <p> Rs.{{ product.price }}</p>
     </div>
 </div>
     </div>
