--- a/ecommerceproject/ecommerceproject/templates/product.html
+++ b/ecommerceproject/ecommerceproject/templates/product.html
@@ -16,16 +16,16 @@
 
 {% block content %}
 <div class="row my_prod_row_class">
-    <div class="mx-auto">
-        <p> <a href="{% url 'shop:allProdCat' %}"> Home</a>|<a href="{{product.category.get_url}}">{{product.name}}</a> </p>
+    <div class="my_prod_row_class mx-auto">
+        <p > <a href="{% url 'shop:allProdCat' %}" style="color:#000;text-decoration: none;font-weight: bold; font-style:italic;"> Home</a>|<a style="color:#000;text-decoration: none;font-weight: bold; font-style:italic;" href="{{product.category.get_url}}">{{product.name}}</a> </p>
 
     </div>
 </div>
 <div class="container">
 <br>
 <div class="row">
-    <div class="col-md-12 col-sm-12 col-md-12 col-lg-6 test-center">
-        <div style="min-width:18rem">
+    <div class="col-md-12 col-sm-12 col-md-12 col-lg-6 text-center">
+        <div style="min-width:18rem ">
             <img src="{{product.image.url}}" alt="{{product.name}}">
         </div>
     </div>
@@ -35,11 +35,12 @@
                 <h1 class="my_prod_title">{{product.name}}</h1>
                 <p>Rs.{{product.price}}</p>
                 <p class="my_title">Description Detail</p>
-                <p class="text-justify my_prod_text">{{product.Description}}</p>
-                {% if product.stock <= 0 %}}
+                <p class="text-justify my_prod_text">{{product.description}}</p>
+
+                {% if product.stock <= 0 %}
                 <p class="text-justify my_prod_text"><b> Out Of Stock</b></p>
                 {% else %}
-                <a class="btn-btn-secondary" href="{% url 'cart:add_cart' product_id %}">Add To Cart</a>
+                <a class="btn-btn-secondary" style="color:#000;text-decoration: none;font-weight: bold; font-style:italic;" href="{% url 'cart:add_cart' product_id=product.id %}">Add To Cart</a>
                 {% endif %}
 
             </div>
