--- a/ecommerceproject/ecommerceproject/templates/search.html
+++ b/ecommerceproject/ecommerceproject/templates/search.html
@@ -12,17 +12,17 @@
 
 {% block content %}
 <div>
-  <p class="text-center my_serach_text">You have searched for a <b>"{{query}}"</b></p>
+  <p class="text-center my_search_text">You have searched for a <b>"{{query}}"</b></p>
 </div>
 <div class="container">
     <div class="row mx-auto">
-        {% for product in products %}
+        {% for prod in product %}
     <div class="my_bottom_margin col-9 col-sm-12  col-md-12 col-lg-4">
         <div class="card text-center" style="min-width:18rem;">
-        <a href={{product.get_url}}"><img class="card-img-top my_image" src="{{product.image.url}}" alt="productname"></a>
+        <a href="{{ prod.get_url }}"><img class="card-img-top my_image" src="{{prod.image.url}}" alt="productname"></a>
         <div class="card-body">
-            <h4>{{product.name}}</h4>
-            <p> {{product.price}}</p>
+            <h4>{{ prod.name }}</h4>
+            <p> {{ prod.price }}</p>
     </div>
 </div>
     </div>
